--- a/CS Website/index.html
+++ b/CS Website/index.html
@@ -12,7 +12,7 @@
 
     <title>AU Computer Science</title>
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 <nav class="navbar navbar-default navbar-expand-sm justify-content-center fixed-top">
     <div class="container">
         <a class="navbar-brand" href="#">
@@ -23,21 +23,18 @@
         </button>
         <div class="collapse navbar-collapse w-100 navbar-fixed-top" id="navbarResponsive">
             <ul class="nav w-100">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#events">Events</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="#contact">Contact Us</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav w-100 justify-content-end">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="https://www.facebook.com/Aurora-University-Computer-Science-Association-2007772099460115/"><i class="fab fa-facebook-f"></i></a>
                 </li>
                 <li class="nav-item">
@@ -63,6 +60,45 @@
     <br/>
     <h1 class="display-1">
         Computer Science Association</h1>
+</div>
+
+<!-- Carousel -->
+<div class="container" style="margin-top:30px">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ul>
+
+        <!-- The slideshow -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-50" src="images/logo-large.png" alt="Computer Science club logo">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-50" src="images/acca-competition.png" alt="ACCA Programming Competition Participants">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-50" src="images/super-smash-bros-event.png" alt="Super Smash Bros Event">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-50" src="images/internship-talk-event.png" alt="Internship Talk Event">
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+
+    </div>
 </div>
 
 <div class="container" style="margin-top:30px">
