Adds "About Us" section

--- a/CS Website/index.html
+++ b/CS Website/index.html
@@ -101,22 +101,93 @@
     </div>
 </div>
 
-<div class="container" style="margin-top:30px">
-    <div class="row">
-        <div class="col-sm">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg">Fake Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg">Fake Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+<div class="container" id="about">
+    <h1 class="display-2 text-center">
+        About Us
+    </h1>
+    <div class="card-deck">
+        <div class="card" id="missionCard">
+            <div class="card-body text-center">
+                <h4 class="card-title"> Mission </h4>
+                <p class="card-text"> We are an organization that brings students with technological interests together to
+                    share and explore different perspectives of Computer Science. </p>
+            </div>
+        </div>
+        <div class="card" id="purposeCard">
+            <div class="card-body text-center">
+                <h4 class="card-title"> Purpose </h4>
+                <p class="card-text"> We strive to prepare Computer Science students for life after graduation by
+                    connecting with different networks as well as providing a supporting environment while having an
+                    enjoyable time.   </p>
+            </div>
         </div>
     </div>
+    <h1 class="display-4"> Leadership </h1>
+    <div class="card-deck">
+        <div class="card" id="presidentCard">
+            <div class="card-body text-center">
+                <h4 class="card-title"> President </h4>
+                <img class="card-img-bottom rounded-circle" src="images/will-ferrell-1.jpg" alt="President photo">
+                <p class="card-text">
+                    Daniel Pytel
+                    <br/>
+                    dpytel01@aurora.edu
+                </p>
+            </div>
+        </div>
+        <div class="card" id="advisorCard">
+            <div class="card-body text-center">
+                <h4 class="card-title"> Faculty Advisor </h4>
+                <img class="card-img-bottom rounded-circle" src="images/will-ferrell-2.jpg" alt="Advisor photo">
+                <p class="card-text">
+                    David Lash
+                    <br/>
+                    dlash@aurora.edu
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="card-deck">
+        <div class="card" id="vpCard">
+            <div class="card-body text-center">
+                <h4 class="card-title"> Vice President </h4>
+                <img class="card-img-bottom rounded-circle" src="images/will-ferrell-3.jpg" alt="Vice president photo">
+                <p class="card-text">
+                    Rodrigo Chavez
+                    <br/>
+                    rchavez01@aurora.edu
+                </p>
+            </div>
+        </div>
+        <div class="card" id="treasurerCard">
+            <div class="card-body text-center">
+                <h4 class="card-title"> Treasurer </h4>
+                <img class="card-img-bottom rounded-circle" src="images/will-ferrell-4.jpg" alt="Treasurer photo">
+                <p class="card-text">
+                    Marcus Becker
+                    <br/>
+                    mbecker09@aurora.edu
+                </p>
+            </div>
+        </div>
+        <div class="card" id="secretaryCard">
+            <div class="card-body text-center">
+                <h4 class="card-title"> Secretary </h4>
+                <img class="card-img-bottom rounded-circle" src="images/will-ferrell-5.png" alt="Secretary photo">
+                <p class="card-text">
+                    Michael Buczkowski
+                    <br/>
+                    mbuczkowski01@aurora.edu
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container" id="events">
+    <h1 class="display-2 text-center">
+        Events
+    </h1>
 </div>
 
 <div class="container" style="margin-top:30px">
@@ -137,6 +208,11 @@
     </div>
 </div>
 
+<div class="container" id="contact">
+    <h1 class="display-2">
+        Contact Us
+    </h1>
+</div>
 
 <div class="container" style="margin-top:30px">
     <div class="row">
