Adds events section

--- a/CS Website/index.html
+++ b/CS Website/index.html
@@ -188,22 +188,99 @@
     <h1 class="display-2 text-center">
         Events
     </h1>
-</div>
 
-<div class="container" style="margin-top:30px">
-    <div class="row">
-        <div class="col-sm">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg">Fake Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg">Fake Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <div class="container" style="margin-top:30px">
+        <div class="card-deck">
+            <div class="card">
+                <img class="card-img-top" src="images/logo-large.png" alt="CS club logo">
+                <div class="card-body">
+                    <h2 class="card-title">How To Use Git</h2>
+                    <h5> November 26, 2019 </h5>
+                    <h5> 12:00 pm - 1:00 pm </h5>
+                    <h5> INST 120 </h5>
+                    <p class="card-text">Discussing the basics of git and source control.
+                    <br/>
+                    Session 4/4</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/logo-large.png" alt="CS club logo">
+                <div class="card-body">
+                    <h2 class="card-title">Career Talk</h2>
+                    <h5> November 14, 2019 </h5>
+                    <h5> 3:00 pm - 4:00 pm </h5>
+                    <h5> Dunham Hall Room 002 </h5>
+                    <p class="card-text">Trevor Pederson from Randstad Technologies will talk about his job and how
+                        students can increase their chances of finding work during and after AU.
+                        Topics include: resume writing, networking, and diversifying your skill set   </p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/logo-large.png" alt="CS club logo">
+                <div class="card-body">
+                    <h2 class="card-title">How To Use Git</h2>
+                    <h5> November 19, 2019 </h5>
+                    <h5> 12:00 pm - 1:00 pm </h5>
+                    <h5> INST 120 </h5>
+                    <p class="card-text">Discussing the basics of git and source control.
+                        <br/>
+                        Session 3/4</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="card-deck">
+            <div class="card">
+                <img class="card-img-top" src="images/logo-large.png" alt="CS club logo">
+                <div class="card-body">
+                    <h2 class="card-title">How To Use Git</h2>
+                    <h5> November 12, 2019 </h5>
+                    <h5> 12:00 pm - 1:00 pm </h5>
+                    <h5> INST 120 </h5>
+                    <p class="card-text">Discussing the basics of git and source control.
+                        <br/>
+                        Session 2/4</p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/logo-large.png" alt="CS club logo">
+                <div class="card-body">
+                    <h2 class="card-title">Internship Talk</h2>
+                    <h5> November 7, 2019 </h5>
+                    <h5> 3:00 pm - 4:00 pm </h5>
+                    <h5> Dunham Hall Room 002 </h5>
+                    <p class="card-text">Several computer science students will discuss their internship experience. </p>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="images/logo-large.png" alt="CS club logo">
+                <div class="card-body">
+                    <h2 class="card-title">How To Use Git</h2>
+                    <h5> November 5, 2019 </h5>
+                    <h5> 12:00 pm - 1:00 pm </h5>
+                    <h5> INST 120 </h5>
+                    <p class="card-text">Discussing the basics of git and source control.
+                        <br/>
+                        Session 1/4</p>
+                </div>
+            </div>
+        </div>
+        <div class="card-deck">
+            <div class="card">
+                <img class="card-img-top" src="images/super-smash-bros-event.png" alt="Super Smash Bros photo">
+                <div class="card-body">
+                    <h2 class="card-title">Super Smash Bros Ultimate Tournament</h2>
+                    <h5> September 26, 2019 </h5>
+                    <h5> 3:00 pm - 5:00 pm </h5>
+                    <h5> Stephens 101 </h5>
+                    <p class="card-text"> Compete in a Super Smash Bros tournament! </p>
+                </div>
+            </div>
+            <div class="card" style="border: none">
+                </div>
+            <div class="card" style="border: none">
+                </div>
+            </div>
         </div>
     </div>
 </div>
