--- a/CS Website/index.html
+++ b/CS Website/index.html
@@ -63,7 +63,7 @@
 </div>
 
 <!-- Carousel -->
-<div class="container" style="margin-top:30px">
+<div class="container" style="margin-top:80px">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
         <!-- Indicators -->
@@ -101,7 +101,7 @@
     </div>
 </div>
 
-<div class="container" id="about">
+<div class="container" id="about" style="margin-top:-20px; padding-top: 90px">
     <h1 class="display-2 text-center">
         About Us
     </h1>
@@ -119,6 +119,26 @@
                 <p class="card-text"> We strive to prepare Computer Science students for life after graduation by
                     connecting with different networks as well as providing a supporting environment while having an
                     enjoyable time.   </p>
+            </div>
+        </div>
+    </div>
+    <div class="card-deck">
+        <div class="card" style="background-color: var(--gray-light)">
+            <div class="card-body text-center">
+                <p class="card-text"> The AU CSC club officers meet on Wednesdays at noon in the Birck center. These meeting are open to any member who would like to help organize club events.
+                </p>
+            </div>
+        </div>
+        <div class="card" style="background-color: var(--gray-light)">
+            <div class="card-body text-center">
+                <p class="card-text"> The club is open to Any student enrolled in at least three (3) credits with Aurora University.
+                </p>
+            </div>
+        </div>
+        <div class="card" style="background-color: var(--gray-light)">
+            <div class="card-body text-center">
+                <p class="card-text"> Aurora University Computer Science Association is committed to the elimination of discrimination based on gender, race, class, economic status, ethnic background, sexual orientation, age, physical ability, and cultural and religious backgrounds
+                </p>
             </div>
         </div>
     </div>
@@ -184,7 +204,7 @@
     </div>
 </div>
 
-<div class="container" id="events">
+<div class="container" id="events" style="margin-top:-20px; padding-top: 90px">
     <h1 class="display-2 text-center">
         Events
     </h1>
@@ -283,32 +303,87 @@
             </div>
         </div>
     </div>
-</div>
 
-<div class="container" id="contact">
-    <h1 class="display-2">
+
+<div class="container" id="contact" style="margin-top:-20px; padding-top: 90px">
+    <h1 class="display-2 text-center">
         Contact Us
     </h1>
-</div>
+    <div class="card-deck">
+        <div class="card" style="background-color: var(--blue); color: var(--light-text)">
+            <div class="card-body">
+                <h4 class="card-title text-center"> Contact Information </h4>
+                <p>Address:</p>
+                <p>
+                    347 S Gladstone Ave
+                    <br/>
+                    Aurora, IL 60506
+                    <br/>
+                    United States
+                </p>
+                <br/>
+                <p> Email: </p>
+                <p>aucomputerscienceclub@gmail.com</p>
+            </div>
+        </div>
 
-<div class="container" style="margin-top:30px">
-    <div class="row">
-        <div class="col-sm">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg">Fake Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg">Fake Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        <div class="card" style="background-color: var(--green)">
+            <div class="card-body">
+                <form class="needs-validated">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="fname" placeholder="First name" name="fName" required>
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">Please fill out this field.</div>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="lname" placeholder="Last name" name="lName" required>
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">Please fill out this field.</div>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="email" placeholder="youremail@domain.com" name="email" required>
+                        <div class="valid-feedback">Valid.</div>
+                        <div class="invalid-feedback">Please fill out this field.</div>
+                    </div>
+                    <label>Select your major(s): </label>
+                    <br/>
+                    <div class="form-check-inline">
+                        <label class="form-check-label">
+                            <input type="checkbox" class="form-check-input" value="">Software Engineering
+                        </label>
+                    </div>
+                    <div class="form-check-inline">
+                        <label class="form-check-label">
+                            <input type="checkbox" class="form-check-input" value="">Computer Science
+                        </label>
+                    </div>
+                    <div class="form-check-inline">
+                        <label class="form-check-label">
+                            <input type="checkbox" class="form-check-input" value="">Math
+                        </label>
+                    </div>
+                    <div class="form-check-inline">
+                        <label class="form-check-label">
+                            <input type="checkbox" class="form-check-input" value="">Business
+                        </label>
+                    </div>
+                    <div class="form-check-inline">
+                        <label class="form-check-label">
+                            <input type="checkbox" class="form-check-input" value="">Other
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" rows="3" placeholder="Comments"></textarea>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
-<div class="jumbotron text-center" style="margin-bottom:0">
+<div class="jumbotron text-center" style="margin-bottom:0; margin-top:10%">
     <p>Design by: K. Hirst 2019</p>
 </div>
 
